# enterprise-rag-knowledge-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 358587f645b2_create_document_chunks_table.py  57cf78437d53_create_users_table.py  cf7a38751ec1_create_documents_table.py
backend/app/: __init__.py  main.py
backend/app/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/chunks/: models.py  repository.py  service.py
backend/app/core/: config.py  exceptions.py  security.py  storage.py
backend/app/db/: base.py  base_model.py  mixins.py  models.py  session.py
backend/app/documents/: enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/embeddings/: exceptions.py  models.py  service.py
backend/app/processing/: chunker.py  cleaner.py  extractor.py  models.py  service.py
backend/tests/: conftest.py  test_auth.py  test_embeddings.py  test_processing.py  test_security.py
